<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image_result"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_won" />

    <ImageView
        android:id="@+id/image_record_child_portrait"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/editchild_default_image"
        android:contentDescription="@string/content_description_child_portrait"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_who_picked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/label_child_name"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_flip_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/msg_result"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_date_time_flip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/msg_date_result"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>