<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="100dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:text="@string/msg_timer_speed"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/button_slow_down_time"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/button_round_minus"
            android:contentDescription="@string/content_description_button_slow_down_time" />

        <TextView
            android:id="@+id/text_time_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/button_speed_up_time"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/button_round_plus"
            android:contentDescription="@string/content_description_button_speed_up_time" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>